<resources>
    <string name="app_name">gaechuck</string>
    <string name="menu">메뉴</string>
    <string name="menu_detail">다양한 소식을 빠르게 확인해보세요</string>

    <string name="main_button_1">학식 안내</string>
    <string name="main_button_2">물품대여 안내</string>
    <string name="main_button_3">분실물 센터</string>
    <string name="main_button_4">제휴사업 안내</string>
    <string name="main_button_5">교내 공지</string>
    <string name="main_button_6">총학생회 공지</string>
    <string name="main_button_7">통합버스노선 안내</string>

    <string name="notice">공지</string>
    <string name="notice_detail">새로운 공지를 확인해보세요</string>
    <string name="notice_univ_description">교내 공지를 한 눈에 확인해보세요</string>
    <string name="notice_council_description">총학생회 공지를 한 눈에 확인해보세요</string>
    <string name="notice_council_search_hint">궁금한 공지 내용을 입력하세요</string>
    <string name="notice_type_1">교내공지</string>
    <string name="notice_type_2">총학생회 공지</string>
    <string name="notice_more">더보기</string>
    <string name="notice_title">제목</string>
    <string name="notice_posted_at">등록일</string>
    <string name="notice_search">교내 공지를 확인하세요</string>
    <string name="notice_tab_0">전체</string>
    <string name="notice_tab_1">기관</string>
    <string name="notice_tab_2">학사</string>
    <string name="notice_tab_3">장학</string>
    <string name="notice_tab_4">채용</string>
    <string name="notice_tab_5">입법예고</string>

<!--    toolbar제목-->
    <string name="bar_food">학식 안내</string>
    <string name="bar_lose">분실물 센터</string>
    <string name="bar_business">제휴 사업</string>
    <string name="bar_rent">물품 대여</string>
    <string name="bar_notice_univ">총학생회 공지</string>
    <string name="bar_notice_all">교내 공지</string>
    <string name="bar_setting">설정</string>

    <!--    business-->
    <string name="business_info">우리 대학과 제휴 맺은 사업을 확인해보세요</string>
    <!--    business category -->
    <string name="category_all">전체</string>
    <string name="category_food">음식점</string>
    <string name="category_beer">주점</string>
    <string name="category_health">헬스&amp;뷰티</string>
    <string name="category_cafe">카페</string>
    <string name="category_hair">미용실</string>
    <string name="category_etc">기타</string>

    <string-array name="CATEGORY">
        <item name="all">@string/category_all</item>
        <item name="food">@string/category_food</item>
        <item name="beer">@string/category_beer</item>
        <item name="health">@string/category_health</item>
        <item name="cafe">@string/category_cafe</item>
        <item name="etc">@string/category_etc</item>
        <item name="hair">@string/category_hair</item>
    </string-array>

<!--    rent-->
    <string name="rent_info">필요한 물품이 대여 가능한지 확인해보세요</string>
    
    <string name="rent_search_title">죄송합니다</string>
    <string name="rent_search_info1">검색하신 물품은 아직 준비되어 있지 않습니다\n학생회에 문의해 보시겠어요?</string>
<!--    <string name="rent_search_info2">검색하신 물품은 아직 준비되어 있지 않습니다</string>-->
    
    <string name="rent_search_btn1">물품대여 화면으로 돌아가기</string>
    <string name="rent_search_btn2">문의하기</string>


    <!--    login-->
    <string name="login_text">코드를 입력해주세요</string>
    <string name="login_info">관리자 모드로 변경됩니다.</string>
    <string name="login_complete_text">코드 확인 완료</string>
    <string name="login_complete_info">관리자 모드로 변경되었습니다.</string>
    <string name="login_fail_text">코드 확인 실패</string>
    <string name="login_fail_info">관리자 모드로 변경에 실패하였습니다.</string>
  
    <string name="id_label">ID</string>
    <string name="id_hint">아이디를 입력해주세요.</string>
    <string name="pw_label">PW</string>
    <string name="pw_hint">비밀번호를 입력해주세요.</string>
  
  
<!--    lose-->
    <string name="lose_info">잃어버린 물건을 탭하여 확인해보세요</string>


    <!--    footer-->
    <string name="footer">
        문의사항 : 경상국립대학교 학생회관 3층 학생회실
    </string>
    <string name="footer_time">
        운영 시간 : 09:00~18:00
    </string>
    <string name="footer_text">
        게재된 내용 및 운영에 대한 개선사항이 있다면 총학생회\n인스타그램으로 연락 부탁드립니다
    </string>

<!--    setting-->
    <string name="setting_title_1">알림 받기</string>
    <string name="setting_title_2">이용약관</string>
    <string name="setting_title_3">로그아웃</string>
    <string name="setting_info_1">총학생회 공지에 대한 알림 설정에 동의합니다.</string>
    <string name="setting_info_2">Gaechuck에 대한 이용약관입니다.</string>
    <string name="setting_terms_title">개척 이용약관</string>
    <string name="setting_terms_content">
        \n최종 개정일: [2024년/12월/25일]
    \n\n1. 약관의 목적
    \n본 약관은 개척(이하 "앱" 또는 "서비스")이 제공하는 서비스의 이용과 관련하여 팀과 사용자 간의 권리, 의무 및 책임 사항을 규정하는 것을 목적으로 합니다.
    \n\n2. 용어의 정의
    \n 1. "팀"이란 개척앱을 운영하는 주체를 의미합니다.
    \n 2. "사용자"란 본 약관에 따라 팀이 제공하는 서비스를 이용하는 자를 의미합니다.
    \n 3. "콘텐츠"란 사용자에 의해 앱 내에 게시된 모든 형태의 글, 사진 등을 의미합니다.

    \n\n3. 약관의 명시, 효력 및 변경
    \n 1. 본 약관은 앱 초기화면 또는 앱 설정 메뉴 등에 게시하여 사용자에게 공지합니다.
    \n 2. 팀은 관련 법령을 위배하지 않는 범위 내에서 본 약관을 변경할 수 있습니다. 약관이 변경될 경우, 팀은 변경사항을 공지하며, 변경된 약관은 공지한 날로부터 7일 후 효력이 발생합니다.

    \n\n4. 서비스의 제공 및 변경
    \n 1. 팀은 사용자의 감정일기 작성 및 AI 답장 기능 등을 제공합니다.
    \n 2. 팀은 운영상 또는 기술상의 필요에 따라 제공하고 있는 서비스를 변경할 수 있습니다.

    \n\n5. 개인정보의 보호
    \n 1. 팀은 사용자의 개인정보를 중요시하며, 관련 법령에 따라 개인정보처리방침을 수립하고 이를 준수합니다.
    \n 2. 사용자의 개인정보는 앱 내에서 필요한 최소한의 범위 내에서 수집하며, 상세 내용은 개인정보처리방침을 참고하시기 바랍니다.

    \n\n6. 사용자의 의무
    \n 1. 사용자는 서비스 이용 시 관계 법령, 본 약관 및 이용 안내를 준수하여야 합니다.
    \n 2. 사용자는 자신의 계정 및 비밀번호 관리에 주의를 기울여야 하며, 타인에게 양도, 대여, 공유해서는 안 됩니다.
    \n 3. 사용자는 타인의 권리를 침해하거나, 부정한 목적으로 서비스를 이용해서는 안 됩니다.

    \n\n7. 서비스 이용제한
    \n 1. 팀은 사용자가 본 약관을 위반하거나 서비스의 정상적인 운영을 방해하는 경우 서비스 이용을 제한할 수 있습니다.
    \n 2. 서비스 이용제한의 구체적인 기준 및 절차는 팀의 정책에 따릅니다.

    \n\n8. 책임의 한계
    \n 1. 팀은 천재지변, 전쟁, 기간통신사업자의 서비스 중지 등 불가항력적인 사유로 서비스 제공에 장애가 발생한 경우 책임을 지지 않습니다.
    \n 2. 팀은 사용자의 귀책사유로 인한 서비스 이용의 장애에 대하여 책임을 지지 않습니다.

    \n\n9. 서비스 중단
    \n 1. 팀은 서비스 제공을 위해 정기점검 또는 긴급점검을 실시할 수 있으며, 이에 따라 서비스가 일시 중단될 수 있습니다.
    \n 2. 팀은 서비스의 변경, 중단에 대하여 사전 공지하며, 불가피한 경우 사후 공지할 수 있습니다.

    \n\n10. 계약해지
    \n사용자는 언제든지 앱 내의 "탈퇴" 기능을 이용하여 서비스 이용계약을 해지할 수 있습니다.

    \n\n11. 분쟁 해결
    \n본 약관과 관련하여 팀과 사용자 간에 발생한 분쟁에 대해 팀과 사용자는 성실히 협의하여 해결하도록 노력합니다. 협의가 이루어지지 않는 경우, 팀의 본사 소재지를 관할하는 법원을 합의 관할 법원으로 합니다.

    \n\n12. 부칙
    \n본 약관은 [2024년/12월/25일]부터 시행됩니다.

    \n\n[고객센터 안내]
    \n문의 이메일: [kdoo9350@naver.com]

    \n\n[개인정보처리방침]
    </string>
    <string name="setting_terms_bottom">개인정보처리방침에 대한 내용은 별도의 페이지를 통해 확인할 수 있습니다. 자세한 사항은 아래의 링크에서 "개인정보처리방침" 을 참고해 주세요.</string>


</resources>