<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingVertical="16dp"
    >

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer"
        android:textSize="10sp"
        android:textColor="@color/gnu_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/footer_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer_time"
        android:textSize="10sp"
        android:textColor="@color/gnu_blue"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="4dp"
        />
    <TextView
        android:id="@+id/footer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer_text"
        android:textSize="10sp"
        android:textColor="@color/gnu_blue"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/footer_time"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>