<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:text="@string/login_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_info"
            android:textColor="@color/info_grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/login_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_field_id"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/id_label"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/login_id"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:hint="@string/id_hint"
            android:inputType="text"
            android:textSize="16dp"
            android:textColor="@color/gnu_blue"
            />
    </LinearLayout>

    <View
        android:layout_width="240dp"
        android:layout_height="2dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_field_id" />

    <LinearLayout
        android:id="@+id/login_field_pw"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_field_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/pw_label"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:hint="@string/pw_hint"
            android:inputType="textPassword"
            android:textSize="16dp"
            android:textColor="@color/gnu_blue"
            />
    </LinearLayout>

    <View
        android:layout_width="240dp"
        android:layout_height="2dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_field_pw" />

    <androidx.appcompat.widget.AppCompatButton
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/style_btn_none"
        android:paddingHorizontal="40dp"
        android:text="확인"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_field_pw" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

</androidx.constraintlayout.widget.ConstraintLayout>