<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/termstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/noto_sans_kr_semibold"
        android:text="@string/setting_terms_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termstitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="4sp">

            <TextView
                android:id="@+id/termsContentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_terms_content"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/terms_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_terms_bottom"
                android:textColor="@color/gnu_blue"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>