<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/search_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_search_title"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_kr_semibold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_search_info1"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="24dp"
            android:text="@string/rent_search_btn1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/style_btn"
            android:layout_marginHorizontal="8dp"
            style="?android:attr/borderlessButtonStyle"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_call_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="24dp"
            android:text="@string/rent_search_btn2"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/style_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginHorizontal="8dp"

            />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_btn"
        android:src="@drawable/search_dino"
        android:layout_marginTop="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>