<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=""
        app:titleTextColor="@color/transparent">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/gnu_blue" />

        <TextView
            android:id="@+id/form_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:fontFamily="@font/noto_sans_kr_semibold"
            android:paddingHorizontal="16dp"
            android:textColor="@color/gnu_blue"
            android:text="완료" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="제목을 입력해주세요."
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:fontFamily="@font/noto_sans_kr_semibold"
        android:background="@color/transparent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        >

        <include
            layout="@layout/fragment_photo_add"
            android:id="@+id/photo_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            android:layout_marginBottom="32dp"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/photo_add_btn"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:dividerColor="@color/gnu_blue"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="카테고리"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:textSize="16sp"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/category_food"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:rippleColor="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:backgroundTint="@color/white"
                android:checked="true"
                android:text="@string/category_food"
                android:textColor="@color/chip_text_list"
                android:textSize="14sp"
                app:chipCornerRadius="50dp"
                app:chipStrokeColor="@color/chip_stroke_list"
                app:chipStrokeWidth="1.18dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/category_beer"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:rippleColor="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:backgroundTint="@color/white"
                android:text="@string/category_beer"
                android:textColor="@color/chip_text_list"
                android:textSize="14sp"
                app:chipCornerRadius="50dp"
                app:chipStrokeColor="@color/chip_stroke_list"
                app:chipStrokeWidth="1.18dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/category_health"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:rippleColor="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:backgroundTint="@color/white"
                android:text="@string/category_health"
                android:textColor="@color/chip_text_list"
                android:textSize="14sp"
                app:chipCornerRadius="50dp"
                app:chipStrokeColor="@color/chip_stroke_list"
                app:chipStrokeWidth="1.18dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/category_cafe"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:rippleColor="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:backgroundTint="@color/white"
                android:text="@string/category_cafe"
                android:textColor="@color/chip_text_list"
                android:textSize="14sp"
                app:chipCornerRadius="50dp"
                app:chipStrokeColor="@color/chip_stroke_list"
                app:chipStrokeWidth="1.18dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/category_etc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:rippleColor="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:backgroundTint="@color/white"
                android:text="@string/category_etc"
                android:textColor="@color/chip_text_list"
                android:textSize="14sp"
                app:chipCornerRadius="50dp"
                app:chipStrokeColor="@color/chip_stroke_list"
                app:chipStrokeWidth="1.18dp" />

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/write_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_category"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="제휴정보"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/field_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="내용을 입력하세요"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14dp"
            android:fontFamily="@font/noto_sans_kr_semibold"
            android:background="@color/transparent"
            android:inputType="textMultiLine"
            android:maxLines="5"
            />


    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
</androidx.constraintlayout.widget.ConstraintLayout>